[gd_scene load_steps=6 format=3 uid="uid://dubaug3im8co3"]

[ext_resource type="Texture2D" uid="uid://duotubie0hl2o" path="res://assets/icons/add cart/tile010.png" id="1_k26j3"]
[ext_resource type="Script" path="res://sences/UI/upgrades/upgrade_button.gd" id="2_kglau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftlrl"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_glguo"]
Label/font_sizes/font_size = 20
Label/styles/normal = SubResource("StyleBoxFlat_ftlrl")

[sub_resource type="Theme" id="Theme_wvrjf"]
Label/font_sizes/font_size = 29
Label/styles/normal = SubResource("StyleBoxFlat_ftlrl")

[node name="upgrade_button" type="TextureButton"]
texture_filter = 1
custom_minimum_size = Vector2(125, 125)
offset_top = 42.0
offset_right = 128.0
offset_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = ExtResource("1_k26j3")
stretch_mode = 5
script = ExtResource("2_kglau")

[node name="upgrade_button" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(175, 175)
layout_mode = 0
offset_left = -13.0
offset_top = -1.0
offset_right = 162.0
offset_bottom = 215.0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="upgrade_button"]
layout_mode = 2

[node name="item_name" type="Label" parent="upgrade_button/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource("Theme_glguo")
text = "Upgrade 1"
horizontal_alignment = 1
autowrap_mode = 2

[node name="price" type="Label" parent="upgrade_button/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_wvrjf")
text = "Price"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="update_ui" from="." to="." method="_on_update_ui"]
